tdf#108305 sw: fix crash on fly "Position and Size"

Everything else in SwFrameShell::Execute() checks pArgs isn't null so do
the same here.

(regression from d02f75a8c36705924ddd6a5921fe3012fafce812)

Change-Id: I73d85b111a5d2c088b9d888b8595ceb3979e8d2b
(cherry picked from commit 28d760e5220a175a5eb8e859498baa4c7f97f3e2)